@@ -207,7 +207,6 @@ class VP9(QtWidgets.QWidget):
                 settings.bitrate = self.widgets.custom_bitrate.currentText()
             else:
                 settings.bitrate = bitrate.split(" ", 1)[0]
-        logger.info(settings)
         return settings
 
     def new_source(self):
